# strix

./: .gitignore  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
crates/strix-admin/: Cargo.toml
crates/strix-admin/src/: auth.rs  handlers.rs  lib.rs  routes.rs
crates/strix-cli/: Cargo.toml
crates/strix-cli/src/: admin.rs  config.rs  main.rs  s3.rs  util.rs
crates/strix-cli/src/commands/: alias.rs  cp.rs  event.rs  group.rs  info.rs  key.rs  ls.rs  mb.rs  mod.rs  policy.rs  rb.rs  rm.rs  settings.rs  stat.rs  usage.rs  user.rs
crates/strix-core/: Cargo.toml
crates/strix-core/src/: error.rs  lib.rs  types.rs
crates/strix-crypto/: Cargo.toml
crates/strix-crypto/src/: lib.rs
crates/strix-gui/: Cargo.toml  Trunk.toml  index.html
crates/strix-gui/src/: api.rs  lib.rs  state.rs  tenant.rs
crates/strix-gui/src/components/: button.rs  card.rs  gauge.rs  header.rs  icon.rs  input.rs  loading.rs  mod.rs  modal.rs  policy_editor.rs  searchable_table.rs  sidebar.rs  table.rs  toast.rs  toggle.rs
crates/strix-gui/src/pages/: access_keys.rs  audit.rs  billing.rs  buckets.rs  configuration.rs  dashboard.rs  events.rs  groups.rs  login.rs  logs.rs  metrics.rs  mod.rs  not_found.rs  openid.rs  placeholder.rs  policies.rs  settings.rs  tenants.rs  users.rs
crates/strix-iam/: Cargo.toml
crates/strix-iam/src/: error.rs  idp.rs  lib.rs  password.rs  policy.rs  secrets.rs  store.rs  types.rs
crates/strix-s3/: Cargo.toml
crates/strix-s3/src/: auth.rs  error.rs  iam_auth.rs  lib.rs  presign.rs  service.rs  stream.rs
crates/strix-storage/: Cargo.toml
crates/strix-storage/src/: cleanup.rs  db.rs  lib.rs  localfs.rs  migrations.rs
deploy/: .env.example  README.md  docker-compose.prod.yml  docker-compose.yml  prometheus.yml
docs/: ADMIN_API.md  ARCHITECTURE.md  QUICKSTART.md  S3_COMPATIBILITY.md  api-reference.md  architecture.md  backup-recovery.md  cli-reference.md  configuration.md  iam-policies.md  observability.md  s3-compatibility.md  sso-oidc.md  tool-compatibility-testing.md
strix/: Cargo.toml
strix/src/: main.rs  metrics.rs  telemetry.rs
tasks/: opencode.md  todo.md
tests/integration/: Cargo.toml
tests/integration/src/: fixtures.rs  iam.rs  multipart.rs  recovery.rs  s3_conformance.rs  versioning.rs
