[workspace]
resolver = "3"
members = ["strix", "crates/*", "tests/integration"]
exclude = ["crates/strix-gui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/ghostkellz/strix"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP / Web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "compression-deflate"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"

# S3 Protocol
s3s = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Crypto
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
md5 = "0.7"
hex = "0.4"
base64 = "0.22"
aes-gcm = "0.10"

# Streams
async-stream = "0.3"
futures-core = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# JWT and Auth
jsonwebtoken = "9"

# Utilities
uuid = { version = "1", features = ["v4"] }
ulid = { version = "1", features = ["serde"] }
bytes = "1"
parking_lot = "0.12"
dashmap = "6"
rand = "0.9"
rust-embed = "8"
mime_guess = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Internal crates
strix-core = { path = "crates/strix-core" }
strix-crypto = { path = "crates/strix-crypto" }
strix-storage = { path = "crates/strix-storage" }
strix-s3 = { path = "crates/strix-s3" }
strix-iam = { path = "crates/strix-iam" }
strix-admin = { path = "crates/strix-admin" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
