[package]
name = "strix-admin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Admin API for Strix object storage"

[dependencies]
strix-core.workspace = true
strix-iam.workspace = true
strix-storage.workspace = true
strix-s3.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
ulid.workspace = true
url = "2"
urlencoding = "2"
uuid.workspace = true
jsonwebtoken.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
rand.workspace = true
