[package]
name = "strix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core types and traits for Strix object storage"

[dependencies]
async-trait.workspace = true
futures.workspace = true
futures-core.workspace = true
thiserror.workspace = true
serde.workspace = true
chrono.workspace = true
bytes.workspace = true
uuid.workspace = true
