[package]
name = "strix-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cryptographic utilities for Strix object storage"

[dependencies]
sha2.workspace = true
hmac.workspace = true
md-5.workspace = true
hex.workspace = true
base64.workspace = true
aes-gcm.workspace = true
rand.workspace = true
