[package]
name = "strix-gui"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Web GUI for Strix object storage"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Navigator",
    "Clipboard",
    "Storage",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "FormData",
    "File",
    "FileList",
    "DragEvent",
    "DataTransfer",
] }
js-sys = "0.3"
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
console_error_panic_hook = "0.1"
urlencoding = "2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
