[package]
name = "strix-iam"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "IAM management for Strix object storage"

[dependencies]
strix-core.workspace = true
strix-crypto.workspace = true
tokio-rusqlite.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
rand = "0.9"
ulid.workspace = true
urlencoding = "2"
argon2 = "0.5"
base64.workspace = true
sha2.workspace = true
hex.workspace = true
